sizing and spacing fixes

--- a/styles/site.css
+++ b/styles/site.css
@@ -49,7 +49,6 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    min-height: 10vh;
     width: 100vw;
     background-color: var(--blue);
 }
@@ -75,6 +74,13 @@ nav {
     color: #fff;
     text-shadow: var(--shadow);
     text-decoration: none;
+}
+
+.active {
+    background-color: white;
+    border-radius: 1em;
+    padding: 0.1em 1.5em;
+    color: black;
 }
 
 .menu div {
@@ -183,7 +189,7 @@ footer {
         font-size: 20px;
     }
     nav {
-        height: 8vh;
+        height: 10vh;
     }
     .nav-li {
         border-top: 2px solid #fff;
@@ -210,12 +216,23 @@ footer {
         text-align: center;
     }
 
+    header section h1,h2,h3 {
+        margin-top: 1.5em;
+    }
+
+    header section h1{
+        font-size: 2.7em;
+    }
+
     main {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
+    }
+    #projects {
+        margin-top: 1.8em;
     }
     #projects div {
         display: flex;
@@ -265,6 +282,9 @@ footer {
     .menu {
         display: none;
     }
+    nav{
+    min-height: 13vh;
+}
     .nav-li li{
         display: flex;
         justify-content: space-around;
